resolved obj-ref-id issues / refactored loop selects / refactored object instantiations to custom queries
git-svn-id: https://scm.office.databay.de/scm/svn/testoverview/trunk@5 ab7ac820-3192-4eb8-a634-ab353cc4a3f6

--- a/templates/css/testoverview.css
+++ b/templates/css/testoverview.css
@@ -3,6 +3,8 @@
     -webkit-border-radius: 20px;
     -khtml-border-radius: 20px;
     border-radius: 20px;
+	
+	vertical-align: middle;
 }
 
 .no-result {
@@ -23,4 +25,9 @@
 .green-result {
 	background: #0c0;
 	color: #000;
+}
+
+.no-perm-result {
+	background: #ddd;
+	color: #aaa;
 }
