--- a/templates/default/tpl.simple_object_row.html
+++ b/templates/default/tpl.simple_object_row.html
@@ -1,7 +1,7 @@
 <tr class="{CSS_ROW}">
 	<td class="std">{VAL_CHECKBOX}</td>
 	<td class="std">{OBJECT_TITLE}</td>
-	<td class="std">{OBJECT_INFO}</td>
-	<td class="std"><img src="{OBJECT_STAUTS_IMG_PATH}" /></td>
+	<td class="std">{OBJECT_INFO}</td><!-- BEGIN object_img_path -->
+	<td class="std"><img src="{OBJECT_IMG_PATH}" /></td><!-- END object_img_path -->
 </tr>
 
