--- a/templates/css/testoverview.css
+++ b/templates/css/testoverview.css
@@ -16,7 +16,7 @@ a.result-link, td.result-cell div
 {
 	padding: 4px 6px !important;
 	display: block !important;
-	margin: 0;
+    margin: 0.2em;
 }
 
 
