--- a/templates/default/tpl.simple_object_row.html
+++ b/templates/default/tpl.simple_object_row.html
@@ -1,4 +1,4 @@
-<tr class="{CSS_ROW}">
+<tr class="{CSS_ROW}" {colapse}>
 	<td class="std">{VAL_CHECKBOX}</td>
 	<td class="std">{OBJECT_TITLE}</td>
 	<td class="std">{OBJECT_INFO}</td><!-- BEGIN object_img_path -->
