New columns, column management and title-modification and changes from prior review. Option Enable Excel / Excel Export WIP

--- a/templates/default/tpl.test_overview_row.html
+++ b/templates/default/tpl.test_overview_row.html
@@ -10,5 +10,13 @@
 		<!-- END result_nolink -->
 	</td>
 	<!-- END cell -->
-	<td class="std">{AVERAGE_VALUE}</td>
+	<!-- BEGIN sum -->
+	<td class="std">{SUM_VALUE}</td>
+	<!-- END sum -->
+	<!-- BEGIN points -->
+	<td class="std">{POINTS_VALUE}</td>
+	<!-- END points -->
+	<!-- BEGIN avg -->
+	<td class="std">{AVG_VALUE}</td>
+	<!-- END avg -->
 </tr>
