--- a/templates/default/tpl.simple_object_row.html
+++ b/templates/default/tpl.simple_object_row.html
@@ -1,5 +1,9 @@
 <tr class="{CSS_ROW}">
 	<td class="std">{VAL_CHECKBOX}</td>
+	<td class="std">
+		<input style="text-align:right;" size="3" id="{VAL_ORDER_ID"
+			   maxlength="4" name="{VAL_ORDER_ID}" value="{VAL_ORDERING}" type="text" />
+	</td>
 	<td class="std">{OBJECT_TITLE}</td>
 	<td class="std">{OBJECT_INFO}</td><!-- BEGIN object_img_path -->
 	<td class="std"><img src="{OBJECT_IMG_PATH}" /></td><!-- END object_img_path -->
