- Bugfix: Double Export Button - Feature: Legend on Table - Feature: Change of color for "in progress" - Feature: Add all tests from course - Feature: Filter "own results only"

--- a/templates/css/testoverview.css
+++ b/templates/css/testoverview.css
@@ -28,14 +28,14 @@ td.result div.result, td.result a.result
 
 .orange-result
 {
-	background: #c30;
-	color: #fff;
+	background: #ffc100;
+	color: #000;
 }
 
 .green-result
 {
 	background: #0c0;
-	color: #000;
+	color: #fff;
 }
 
 .red-result, .red-result:hover
