Features: - New columns firstname and lastname instead of fullname in table - New columns firstname and lastname instead of fullname in export - Columns firstname, lastname and login sortable - Colored indication of success by cell background color in export

--- a/templates/default/tpl.test_overview_row.html
+++ b/templates/default/tpl.test_overview_row.html
@@ -1,5 +1,7 @@
 <tr class="{CSS_ROW}">
-	<td class="std">{TEST_PARTICIPANT}</td>
+	<td class="std">{TEST_PARTICIPANT_FIRSTNAME}</td>
+	<td class="std">{TEST_PARTICIPANT_LASTNAME}</td>
+	<td class="std">{TEST_LOGIN}</td>
 	<!-- BEGIN cell -->
 	<td class="std result">
 		<!-- BEGIN result -->
