--- a/templates/default/tpl.simple_object_row.html
+++ b/templates/default/tpl.simple_object_row.html
@@ -1,5 +1,5 @@
 <tr class="{CSS_ROW}">
-	<td class="std">{VAL_CHECKBOX}</td>
+	<td class="std"><input type="checkbox" value="{VAL_ID}" name="{ID_COL}" /></td>
 	<td class="std">
 		<input style="text-align:right;" size="3" id="{VAL_ORDER_ID"
 			   maxlength="4" name="{VAL_ORDER_ID}" value="{VAL_ORDERING}" type="text" />
