--- a/templates/default/tpl.simple_object_row.html
+++ b/templates/default/tpl.simple_object_row.html
@@ -6,6 +6,6 @@
 	</td>
 	<td class="std">{OBJECT_TITLE}</td>
 	<td class="std">{OBJECT_INFO}</td><!-- BEGIN object_img_path -->
-	<td class="std"><img src="{OBJECT_IMG_PATH}" /></td><!-- END object_img_path -->
+	<td class="std"><img src="./templates/default/images/standard/{OBJECT_IMG_PATH}" /></td><!-- END object_img_path -->
 </tr>
 
